deploy/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: proc-agent
  labels:
    app.kubernetes.io/part-of: sap-proc-agent
